--- a/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
+++ b/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
@@ -11,5 +11,7 @@ spring:
       config:
         server-addr: localhost:8848 #配置中心地址
         file-extension: yaml #指定yaml格式的配置
-
+        namespace: cc16db99-9bc5-462c-bf27-958168ac7a10
+#         group: TEST_GROUP
+        group: DEV_GROUP
 
